Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-49776

WinRT/Network: QTcpServer always emits acceptError() on new connection

    XMLWordPrintable

Details

    • Bug
    • Resolution: Done
    • P2: Important
    • 5.6.0
    • 5.6.0 Alpha
    • Network: Sockets
    • None
    • WinRT/Desktop/MSVC2015/64bit
    • WinRT
    • 270aa5b58d7a4db23287a77c89a97dddd81694a6 (qtbase/5.6, 7.12.2015, 5.6)

    Description

      Apply qtbug49776_repro.diff and run examples/network/fortuneserver example. On a new connection:

      t.winrtrunner: App started with process ID 1100
      qt.winrtrunner.app: This plugin does not support propagateSizeHints()
      qt.winrtrunner.app: Server::acceptError QAbstractSocket::UnknownSocketError "Unknown error"
      qt.winrtrunner.app: QCoreApplication::exit: It is not recommended to explicitly exit an application on Windows Store Apps
      qt.winrtrunner: App exited with code 1
      

      Fix coming up...

      Attachments

        Activity

          People

            kleint Friedemann Kleint
            kleint Friedemann Kleint
            Votes:
            0 Vote for this issue
            Watchers:
            1 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved: